[package]
name = "wio"
version = "0.2.2"
authors = ["Peter Atashian <retep998@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Windows IO wrapper"
repository = "https://github.com/retep998/wio-rs"
readme = "README.md"
keywords = ["windows", "ffi", "win32", "com"]
categories = ["api-bindings", "os::windows-apis"]
include = [
    "/src/**/*",
    "/Cargo.toml",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/build.rs",
    "/README.md",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "aarch64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
]

[dependencies]
log = { version = "0.4", optional = true }
winapi = { version = "0.3", features = [
    "consoleapi",
    "errhandlingapi",
    "fileapi",
    "handleapi",
    "minwinbase",
    "minwindef",
    "oleauto",
    "processthreadsapi",
    "std",
    "synchapi",
    "unknwnbase",
    "winbase",
    "wincon",
    "winerror",
    "winnt",
    "wtypes",
] }

[dev-dependencies]
rand = "0.7"
winapi = { version = "0.3", features = [
    "combaseapi",
    "consoleapi",
    "devpkey",
    "devpropdef",
    "errhandlingapi",
    "fileapi",
    "handleapi",
    "hidclass",
    "ioapiset",
    "minwinbase",
    "minwindef",
    "mmdeviceapi",
    "processthreadsapi",
    "setupapi",
    "std",
    "synchapi",
    "unknwnbase",
    "usbioctl",
    "usbiodef",
    "utilapiset",
    "winbase",
    "wincon",
    "winerror",
    "winnt",
] }

[patch.crates-io]
winapi = { git = "https://github.com/retep998/winapi-rs", branch = "0.3" }
